# tagit

./: .gitignore  Makefile.am  README.md  configure.ac
src/: Makefile.am  tagit.c  util.c  util.h
